# internTA

./: .env  .gitignore  CLAUDE.md  Dockerfile.web  LICENSE  README-EN.md  README-zh.md  README.md  api.py  app.py  app_v2.py  chat.sh  docker-compose.web.yml  merge.py  merge.sh  nchat.sh  pyproject.toml  requirements.txt  requirements_v2.txt  run.py  run.sh  train.sh  traino.sh
config/: api.yml  internlm2_1_8b_qlora_alpaca_e3_copy.py
data/: Exercises_math.json  SynBio-Bench.json  entities.json  examples.xlsx  exercise_coding.json  exercises_coding.json  exercises_math.json  format_lint.py  generate_claim.py  generate_data.py  internTA2_evaluation_utils.py  model_evaluation.py  prm_eg.json  test_generate_data.py  training.json  validation.json
docs/: development.mdx  docs.json  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: introduction.mdx  openapi.yml
skills/: skills-lock.json
skills/ddi/: SKILL.md
test/: test_auth.py  test_chain_of_thought.py  test_generate_claim_and_question.py  test_internTA2_evaluation.py  test_k_shot_prompting.py  test_model_evaluation.py  test_rag.py  test_reflexion.py  test_self_consistency.py  test_tool_calling.py
train/: internlm2_1_8b_qlora_alpaca_e3_copy.py  sft_internTA2.py  train_agent.py  traino.sh
web/: index.html  requirements-min.txt  spec-db.md  spec-llm.md  spec-valid.md
web/app/: db.py  main.py  spec.md
web/css/: styles.css
web/data/: app.db
web/frontend/: index.html
web/js/: script.js
web/tests/: conftest.py  test_extract.py  test_opm.py  test_opm_validate.py  test_testcase_md.py
(+12 files in other folders)
